# Qutility

./: .gitignore  Cargo.toml  Cross.toml  README.md  README_CN.md
.agent/rules/: file-header-constraints.md
.github/workflows/: build.yml
scripts/: build-cross.sh
src/: error.rs  main.rs
src/batch/: README.md  collector.rs  mod.rs  runner.rs
src/cli/: README.md  analyze.rs  collect.rs  convert.rs  mod.rs  submit.rs
src/commands/: README.md  collect.rs  convert.rs  mod.rs  submit.rs
src/commands/analyze/: dft.rs  dft_postprocessing.rs  dft_status.rs  mod.rs  xrd.rs
src/dft/: README.md  mod.rs  scan.rs
src/models/: README.md  calculation.rs  mod.rs  structure.rs
src/parsers/: README.md  castep_out.rs  cell.rs  mod.rs  outcar.rs  poscar.rs  res.rs
src/utils/: README.md  mod.rs  output.rs  progress.rs  slurm.rs
src/xrd/: README.md  calculator.rs  export.rs  mod.rs  plot.rs  scattering.rs
